--- a/res/layout/activity_sex.xml
+++ b/res/layout/activity_sex.xml
@@ -3,7 +3,7 @@
     android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -11,34 +11,48 @@
     tools:context="com.example.test.MainActivity" >
 
     <LinearLayout
-        android:id="@+id/LinearLayout_left"
+        android:id="@+id/LinearLayout_main"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_weight="1"
-        android:orientation="vertical" >
-    </LinearLayout>
+        android:orientation="horizontal" >
 
-    <LinearLayout
-        android:id="@+id/LinearLayout_midle"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="1"
-        android:orientation="vertical" >
-
-        <ImageView
-            android:id="@+id/imageView1"
+        <LinearLayout
+            android:id="@+id/LinearLayout_left"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:src="@drawable/table_4" />
+            android:layout_weight="1"
+            android:orientation="vertical" >
+        </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/LinearLayout_midle"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:src="@drawable/table_4" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/LinearLayout_right"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:orientation="vertical" >
+        </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/LinearLayout_right"
+    <ImageView
+        android:id="@+id/imageView2"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_weight="1"
-        android:orientation="vertical" >
-    </LinearLayout>
+        android:layout_weight="7"
+        android:src="@drawable/ic_launcher" />
 
 </LinearLayout>
