--- a/res/layout/activity_sex.xml
+++ b/res/layout/activity_sex.xml
@@ -36,9 +36,9 @@
                 android:id="@+id/imageView1"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
+                android:scaleType="fitXY"
                 android:src="@drawable/table_4" />
         </LinearLayout>
-
         <LinearLayout
             android:id="@+id/LinearLayout_right"
             android:layout_width="fill_parent"
@@ -46,13 +46,13 @@
             android:layout_weight="1"
             android:orientation="vertical" >
         </LinearLayout>
+        
     </LinearLayout>
-
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_weight="7"
-        android:src="@drawable/ic_launcher" />
-
+        android:src="@drawable/kettei" />
+    
 </LinearLayout>
