--- a/res/values/Array.xml
+++ b/res/values/Array.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
     <string-array name="spnEntries">
+        <item>A</item>
         <item>B</item>
         <item>C</item>
         <item>D</item>
     	<item>E</item>
-        <item>F</item>
-        <item>G</item>
-        <item>H</item>
     </string-array>
 </resources>
