--- a/res/layout/activity_input_number.xml
+++ b/res/layout/activity_input_number.xml
@@ -24,14 +24,6 @@
         android:text="人数を入力してね。"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <NumberPicker
-        android:id="@+id/NumberPicker01"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/textView2"
-        android:layout_alignTop="@+id/numberPicker1"
-        android:layout_marginRight="20dp" />
-
     <TextView
         android:id="@+id/TextView01"
         android:layout_width="wrap_content"
@@ -42,42 +34,42 @@
         android:text="人"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/numberPicker1"
-        android:layout_marginBottom="15dp"
-        android:layout_toLeftOf="@+id/textView1"
-        android:text="男の子"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#0000FF" />
-
-    <TextView
-        android:id="@+id/TextView02"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView3"
-        android:layout_alignBottom="@+id/textView3"
-        android:layout_alignLeft="@+id/NumberPicker01"
-        android:text="女の子"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#FF0000" />
-
-    <Button
-        android:id="@+id/button1"
+    <ImageView
+        android:id="@+id/imageView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="34dp"
-        android:text="決定" />
+        android:src="@drawable/kettei2" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/imageView1"
+        android:src="@drawable/womanmoji" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/textView1"
+        android:layout_centerVertical="true"
+        android:src="@drawable/manmoji" />
+
+    <NumberPicker
+        android:id="@+id/NumberPicker01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/imageView3"
+        android:layout_alignRight="@+id/imageView3" />
 
     <NumberPicker
         android:id="@+id/numberPicker1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/button1"
-        android:layout_alignLeft="@+id/textView2" />
+        android:layout_above="@+id/imageView3"
+        android:layout_alignLeft="@+id/imageView3" />
 
 </RelativeLayout>
