--- a/res/layout/activity_sex.xml
+++ b/res/layout/activity_sex.xml
@@ -3,6 +3,7 @@
     android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/back2"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -10,11 +11,18 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.test.MainActivity" >
 
+    <ImageView
+        android:id="@+id/imageView4"
+        android:background="@drawable/message1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="6" />
+
     <LinearLayout
         android:id="@+id/LinearLayout_main"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:orientation="horizontal" >
 
         <LinearLayout
@@ -39,6 +47,7 @@
                 android:scaleType="fitXY"
                 android:src="@drawable/table_4" />
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/LinearLayout_right"
             android:layout_width="fill_parent"
@@ -46,15 +55,13 @@
             android:layout_weight="1"
             android:orientation="vertical" >
         </LinearLayout>
-        
     </LinearLayout>
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_weight="7"
-        android:layout_gravity="bottom"
+        android:layout_weight="6"
         android:src="@drawable/kettei2" />
-    
+
 </LinearLayout>
