--- a/res/layout/activity_like_select.xml
+++ b/res/layout/activity_like_select.xml
@@ -26,7 +26,7 @@
         android:orientation="horizontal" >
 
         <LinearLayout
-            android:id="@+id/LinearLayout_left"
+            android:id="@+id/LinearLayout_left_select"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
@@ -34,7 +34,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/LinearLayout_midle"
+            android:id="@+id/LinearLayout_midle_select"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
@@ -49,19 +49,12 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/LinearLayout_right"
+            android:id="@+id/LinearLayout_right_select"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:orientation="vertical" >
         </LinearLayout>
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="6"
-        android:src="@drawable/kettei2" />
 
 </LinearLayout>
