--- a/res/layout/activity_result.xml
+++ b/res/layout/activity_result.xml
@@ -3,12 +3,27 @@
     android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:background="@drawable/back2"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.test.MainActivity" >
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:background="@drawable/message1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="6" />
+
+    <LinearLayout
+        android:id="@+id/LinearLayout_main"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="2"
+        android:orientation="horizontal" >
 
         <LinearLayout
             android:id="@+id/LinearLayout_left_result1"
@@ -29,7 +44,8 @@
                 android:id="@+id/imageView1"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:src="@drawable/table_4" />
+                android:scaleType="fitXY"
+                android:src="@drawable/table_5" />
         </LinearLayout>
 
         <LinearLayout
@@ -39,5 +55,6 @@
             android:layout_weight="1"
             android:orientation="vertical" >
         </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
