--- a/res/layout/activity_shuffle.xml
+++ b/res/layout/activity_shuffle.xml
@@ -1,9 +1,10 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/back_shuffle"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -11,10 +12,13 @@
     tools:context="com.example.test.ShuffleActivity" >
 
     <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
+        android:id="@+id/imageViewShuffle"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/kettei2" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="209dp"
+        android:src="@drawable/shuffle" />
     
-</LinearLayout>
+</RelativeLayout>
     
